# PencilDurabilityKata

./: .gitignore  CMakeLists.txt  Pencil.cpp  Pencil.h  README.md  main.cpp
tests/: CMakeLists.txt
tests/basic_tests/: CMakeLists.txt  pencil_tests.cpp
tests/lib/googletest/: CMakeLists.txt
